# VoiceCraft-CLI

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  setup.cfg  setup.py
tests/: __init__.py  test_audio.py  test_batch.py  test_engines.py  test_ssml.py
voicecraft_cli/: __init__.py  __main__.py  cli.py
voicecraft_cli/audio/: __init__.py  converter.py  processor.py  wave_utils.py
voicecraft_cli/batch/: __init__.py  queue.py
voicecraft_cli/engines/: __init__.py  base.py  espeak_engine.py  factory.py  pyttsx3_engine.py  system_engine.py
voicecraft_cli/ssml/: __init__.py  parser.py
voicecraft_cli/tui/: __init__.py  dashboard.py
voicecraft_cli/utils/: __init__.py  config.py  logger.py
