[metadata]
name = voicecraft-cli
version = 1.0.0
description = Lightweight Terminal Speech Synthesis & Audio Processing Engine
long_description = file: README.md
long_description_content_type = text/markdown
author = VoiceCraft-CLI Contributors
license = MIT
requires_python = >=3.7

[options]
packages = find:
python_requires = >=3.7

[options.entry_points]
console_scripts =
    voicecraft-cli = voicecraft_cli.cli:main

[bdist_wheel]
universal = 1

[flake8]
max-line-length = 100
exclude = .git,__pycache__,build,dist,*.egg-info

[mypy]
python_version = 3.7
warn_return_any = True
warn_unused_configs = True
disallow_untyped_defs = False
